--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "react": "17.0.2",
     "react-hook-form": "^7.29.0",
     "react-native": "0.67.4",
+    "react-native-actions-sheet": "^0.6.1",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-pager-view": "^5.4.15",
     "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
-    "react-native-svg": "^12.3.0"
+    "react-native-svg": "^12.3.0",
+    "react-native-tab-view": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
