--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,7 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+MYAPP_UPLOAD_STORE_FILE=bimax.keystore
+MYAPP_UPLOAD_KEY_ALIAS=bimax
+MYAPP_UPLOAD_STORE_PASSWORD=bimaxapp
+MYAPP_UPLOAD_KEY_PASSWORD=bimaxapp
